--- a/Proyectos.html
+++ b/Proyectos.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link href="css/fontawesome/css/all.min.css" rel="stylesheet">
-    <link href="css/fontawesome/css/fontawesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/04d494b3e0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="CSS/styles.css">
-    <script type="text/javascript" src="js/jquery-3.4.1.slim.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900&display=swap"
-        rel="stylesheet">
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
 <div class="container">
@@ -23,16 +22,16 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link " href="/">Inicio</a>
+        <a class="nav-link " href="Inicio.html">Inicio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="sobre-mi.php">Sobre mí</a>
+        <a class="nav-link " href="">Sobre mí</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="proyectos.php">Proyectos</a>
+        <a class="nav-link active" href="Proyectos.html">Proyectos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="contacto.php">Contacto</a>
+        <a class="nav-link " href="Contacto.html">Contacto</a>
       </li>
     </ul>
   </div>
@@ -52,7 +51,7 @@
             <div class="row my-sm-5 my-3">
                 <div class="col-sm-6 col-12 pr-3">
                     <div class="bg-white">
-                        <img src="images/abmventas.png" alt="ABM Ventas" class="img-fluid">
+                        <img src="Images/abmventas.png" alt="ABM Ventas" class="img-fluid">
                         <div class="row p-3">
                             <div class="col-12">
                                 <h3>ABM Ventas</h3>
@@ -66,10 +65,10 @@
                         </div>
                         <div class="row p-3">
                             <div class="col-6">
-                                <a href="sistema/abmventas/abmcliente.php" class="btn" target="_blank">Ver online</a>
+                                <p href="sistema/abmventas/abmcliente.php" class="btn" target="_blank">Ver online</p>
                             </div>
                             <div class="col-6 text-right">
-                                <a href="https://github.com" target="_blank">Código fuente</a>
+                                <p href="https://github.com" target="_blank">Código fuente</p>
                             </div>
                         </div>
                     </div>
@@ -90,10 +89,10 @@
                         </div>
                         <div class="row p-3">
                             <div class="col-6">
-                                <a href="sistema/abmventas/abmcliente.php" class="btn" target="_blank">Ver online</a>
+                                <p href="sistema/abmventas/abmcliente.php" class="btn" target="_blank">Ver online</p>
                             </div>
                             <div class="col-6 text-right">
-                                <a href="https://github.com" target="_blank">Código fuente</a>
+                                <p href="https://github.com" target="_blank">Código fuente</p>
                             </div>
                         </div>
                     </div>
@@ -110,7 +109,7 @@
             <div class="col-sm-4 col-12 text-center py-4 py-sm-0">
                 <a href="https://api.whatsapp.com/send?phone=541165188109&amp;text=Hola" target="_blank"><i class="fab fa-whatsapp"></i></a>
                 <a href="" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a href="" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/Gabriel2904" target="_blank"><i class="fab fa-github"></i></a>
             </div>
             <div class="col-sm-4 col-12 text-sm-right text-center">
                 Patrocinado por<br><a href="https://depcsuite.com" target="_blank">DePC Suite</a>
